correct alignment of notifications

--- a/client/assets/scss/partials/_dashboard.scss
+++ b/client/assets/scss/partials/_dashboard.scss
@@ -5,7 +5,7 @@
 	justify-content: center;
 
 	.fa {
-		font-size: 0.8rem;
+		font-size: 1.7rem;
 	}
 }
 
@@ -23,7 +23,8 @@
 
 	.dash-item-body {
 		font-weight: 400;
-		padding-top: 20px;
+		padding-top: 40px;
+		padding-bottom: 20px;
 	}
 
 	.grid-content {
@@ -36,6 +37,16 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
+	
+	.grid-content {
+		display:flex;
+		align-items: stretch;
+	}
+
+	.fa-angle-right {
+		align-self: flex-start;
+	}
+
 }
 
 
@@ -58,15 +69,23 @@
 
 .notification-title {
 	/*flex-grow: 3;*/
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 .notification-section {
-
+	@extend .small-11;
+	@extend .small-offset-1;
 }
 
 .notification-actions {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+}
+
+.site-notification {
+	.button.hollow.dark {
+		border: 1px solid $af-blue;
+		color: $af-blue;
+	}
 }
 
 .followed-notification {
@@ -79,4 +98,8 @@
 
 .featured-notification {
 	background-color: darken($af-green,5%);
+}
+
+.arrow-expand {
+	padding-right: 30px;
 }
